# QKeyWidget

./: README.md  pyproject.toml  setup.cfg
src/qkeywidget/: __init__.py  tools.py  widget.py
test/: layout.py  manual_test.py
