[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qkeywidget"
version = "0.0.5"
authors = [
  { name="Kenny Hommel", email="kennyhommel36@gmail.com" },
]
description = "A custom pyqt widget for keybinds / key combinations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kennyhml/QKeyWidget"
"Bug Tracker" = "https://github.com/kennyhml/QKeyWidget/issues"